# rl_column_popper

./: README.md  activate_venv.bat  plot_metrics.bat  pyproject.toml  run.bat
.github/workflows/: ci.yml
.specify/memory/: constitution.md
models/: ppo_column_popper_metrics.csv
models/logs/: progress.csv
scripts/: gym_demo.py  plot_metrics.py  train_agent.py  watch_agent_curses.py
specs/001-build-a-terminal/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-build-a-terminal/contracts/: gym_env.md
src/column_popper/: version.py
src/column_popper/cli/: play.py  protocol.py  rollout.py
src/column_popper/core/: board.py  schedule.py
src/column_popper/envs/: __init__.py  column_popper_env.py
src/column_popper/render/: ansi.py  curses_ui.py
src/column_popper/rewards/: presets.py
src/column_popper/utils/: manifest.py  rng.py
tests/benchmark/: test_step_benchmark.py
tests/contract/: test_gym_env.py
tests/integration/: test_game_loop.py
tests/unit/: test_board.py  test_manifest.py  test_rng.py  test_schedule.py
